# Elprom

./: CMakeCache.txt  CMakeLists.txt  DataSaver.cpp  DataSaver.h  FileReader.cpp  FileReader.h  cmake_install.cmake  main.cpp
Debug/: FileReader.d  main.d  subdir.mk
Release/: makefile  sources.mk  subdir.mk
config/: DataSaver.h  DataSaverCfg.h
